@@ -1,5 +1,10 @@
 2018-02-25  Qian Yun  <oldk1331@gmail.com>
 
+	* src/hyper/hthits.c, src/include/hthits.H1:
+	Eliminate 'register' keyword
+
+2018-02-25  Qian Yun  <oldk1331@gmail.com>
+
 	* src/algebra/viewDef.spad: Fix index bound
 
 2018-02-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
